Revert media viewer

--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
   <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
   <link rel="stylesheet" href="static/css/index.css">
-
+  
   <script defer data-domain="brdf-uncertainty.github.io" src="https://plausible.io/js/script.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
   <script defer src="static/js/fontawesome.all.min.js"></script>
   <script src="static/js/bulma-carousel.min.js"></script>
   <script src="static/js/bulma-slider.min.js"></script>
@@ -202,5 +203,5 @@
   </div>
 </footer>
 
-</body>
-</html>
+  </body>
+  </html>
