--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                   <div class="is-size-5 publication-authors">
                     <span class="author-block">ArXiv 2024</span>
                   </div>
-
+                </div>
                   <div class="column has-text-centered">
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
