--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Abstract</h2>
-        <div class="content">
+        <div class="content has-text-left">
           <p>
             Relightable object acquisition is a key challenge in simplifying digital asset creation.
             Complete reconstruction of an object typically requires capturing hundreds to thousands of photographs under controlled illumination, with specialized equipment.
