Add teaser image

--- a/index.html
+++ b/index.html
@@ -116,6 +116,19 @@
   </div>
 </section>
 
+<!-- Teaser image-->
+<section class="hero teaser">
+  <div class="container is-max-desktop">
+    <div class="hero-body">
+      <img src="static/images/teaser.jpg" alt="Overview image."/>
+      <h2 class="subtitle has-text-centered">
+        We present fast multi-view material acquisition for objects captured in uncontrolled setups (left). We propose to build upon and extend the signal processing framework for inverse rendering proposed by Ramamoorthi and Hanrahan (2001): we improve the model with shadowing and masking and propose a lightweight objective function for BRDF fitting using spherical harmonics power spectra (center). Using this objective, we propose an uncertainty estimation approach relying on statistical entropy. We show that our material estimation is significantly faster than previous work and achieves similar or better results.
+      </h2>
+    </div>
+  </div>
+</section>
+<!-- End teaser image -->
+
 <!-- Paper abstract -->
 <section class="section hero is-light">
   <div class="container is-max-desktop">
