--- a/index.html
+++ b/index.html
@@ -135,13 +135,15 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Abstract</h2>
-        <div class="content has-text-left">
+        <div class="content has-text-justified">
           <p>
             Relightable object acquisition is a key challenge in simplifying digital asset creation.
             Complete reconstruction of an object typically requires capturing hundreds to thousands of photographs under controlled illumination, with specialized equipment.
             The recent progress in differentiable rendering improved the quality and accessibility of inverse rendering optimization.
             Nevertheless, under uncontrolled illumination and unstructured viewpoints, there is no guarantee that the observations contain enough information to reconstruct the appearance properties of the captured object.
-            We thus propose to consider the acquisition process from a signal-processing perspective.
+          </p>
+          <p>
+            We propose to consider the acquisition process from a signal-processing perspective.
             Given an object's geometry and a lighting environment, we estimate the properties of the materials on the object's surface in seconds.
             We do so by leveraging frequency domain analysis, considering the recovery of material properties as a deconvolution, enabling fast error estimation.
             We then quantify the uncertainty of the estimation, based on the available data, highlighting the areas for which priors or additional samples would be required for improved acquisition quality.
