--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="hero-body">
       <div class="container is-max-desktop">
         <div class="columns is-centered">
-          <div class="column has-text-centered">
+          <div class="column has-text-left">
             <h1 class="title is-1 publication-title">Fast and Uncertainty-Aware SVBRDF Recovery from Multi-View Capture using Frequency Domain Analysis</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
@@ -63,7 +63,7 @@
                     <span class="author-block">ArXiv 2024</span>
                   </div>
                 </div>
-                  <div class="column has-text-centered">
+                  <div class="column has-text-left">
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
@@ -121,7 +121,7 @@
   <div class="container is-max-desktop">
     <div class="hero-body">
       <img src="static/images/teaser.jpg" alt="Overview image."/>
-      <h2 class="subtitle has-text-centered">
+      <h2 class="subtitle has-text-left">
         We present fast multi-view material acquisition for objects captured in uncontrolled setups (left). We propose to build upon and extend the signal processing framework for inverse rendering proposed by Ramamoorthi and Hanrahan (2001): we improve the model with shadowing and masking and propose a lightweight objective function for BRDF fitting using spherical harmonics power spectra (center). Using this objective, we propose an uncertainty estimation approach relying on statistical entropy. We show that our material estimation is significantly faster than previous work and achieves similar or better results.
       </h2>
     </div>
@@ -132,10 +132,10 @@
 <!-- Paper abstract -->
 <section class="section hero is-light">
   <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
+    <div class="columns is-centered has-text-left">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Abstract</h2>
-        <div class="content has-text-justified">
+        <div class="content has-text-left">
           <p>
             Relightable object acquisition is a key challenge in simplifying digital asset creation.
             Complete reconstruction of an object typically requires capturing hundreds to thousands of photographs under controlled illumination, with specialized equipment.
@@ -160,8 +160,8 @@
 <!-- Video carousel -->
 <section class="hero is-small">
   <div class="hero-body">
-    <div class="container">
-      <h2 class="title is-3">Another Carousel</h2>
+    <div class="container is-max-desktop content">
+      <h2 class="title is-3">Results</h2>
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-video1">
           <video poster="" id="video1" autoplay controls muted loop height="100%">
