--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
       <div class="hero-body">
         <img src="static/images/teaser.jpg" alt="Overview image." />
         <h2 class="subtitle has-text-left">
-          We present fast multi-view material acquisition for objects captured in uncontrolled setups (left). We propose
-          to build upon and extend the signal processing framework for inverse rendering proposed by Ramamoorthi and
-          Hanrahan (2001): we improve the model with shadowing and masking and propose a lightweight objective function
-          for BRDF fitting using spherical harmonics power spectra (center). Using this objective, we propose an
-          uncertainty estimation approach relying on statistical entropy. We show that our material estimation is
+          We present fast and uncertainty-aware multi-view material acquisition for objects captured in uncontrolled setups.
+          We propose to build upon and extend the <b>signal processing framework for inverse rendering</b> by Ramamoorthi and
+          Hanrahan (2001): we improve the model with <b>shadowing and masking</b> and propose a lightweight objective function
+          for BRDF fitting using spherical harmonics power spectra (center). We then use this approximation to
+          provide a measure of <b>uncertainty relying on statistical entropy</b>. We show that our material estimation is
           significantly faster than previous work and achieves similar or better results.
         </h2>
       </div>
@@ -178,11 +178,11 @@
 
 
   <!-- Video carousel -->
-  <section class="section hero is-small">
+   <section class="section">
+  <section class="hero is-small">
     <div class="hero-body">
       <div class="container is-max-desktop">
         <h2 class="title is-3">Relighting results</h2>
-        <p>We optimize a PBR texture (base color, metallicity, roughness) on multi-view captures from <a href="https://stanfordorb.github.io" target="_blank">Stanford ORB</a> and relight the resulting object.</a></p>
         <div id="results-carousel" class="carousel results-carousel">
           <div class="item item-object1">
             <div class="columns">
@@ -282,25 +282,39 @@
           </div>
 
         </div>
-      </div>
-    </div>
-  </section>
-  <!-- End video carousel -->
-
-<!-- Video carousel -->
-  <section class="section hero is-small">
-    <div class="hero-body">
-      <div class="container is-max-desktop">
-        <h2 class="title is-3">Uncertainty results</h2>
-        <h2 class="subtitle">We demonstrate the informativeness of our fast approximate entropy for other inverse rendering frameworks (in this case, Mitsuba). We interleave ground truth properties and properties estimated with Mitsuba (base color, roughness, metallicity). </h2>
-        <img src="static/images/uncertainty.png" alt="Uncertainty." />
-        <p>
-          On the right, we show the average estimation error followed by our entropy estimation, which is independent of Mitsuba's estimation. We observe that low entropy is indicative of lower error, suggesting that it captures the sufficiency of information in the input signal. On the dice example (top row), the `one'-face is lit less than other faces and we observe highlights with lower intensity, leading to higher entropy. While we still recover the white albedo correctly, the estimation of roughness and metallicity for the dot has a high error. Similarly, the inside and lower parts of the doughnut are less observed and not lit by strong light sources. Again, entropy is high in regions of high error (especially in metallicity). The triceratops collar is down-facing and not well-lit and our entropy captures the lack of observation that leads to high error in the metallicity part.
+        <p>We optimize a PBR texture (base color, metallicity, roughness) on multi-view captures from <a
+            href="https://stanfordorb.github.io" target="_blank">Stanford ORB</a> and relight the resulting object.</a>
         </p>
       </div>
     </div>
   </section>
   <!-- End video carousel -->
+
+  <!-- Video carousel -->
+  <section class="hero is-small">
+    <div class="hero-body">
+      <div class="container is-max-desktop">
+        <div class="content">
+          <h2 class="title is-3">Uncertainty results</h2>
+          <p>We show that our formulation for uncertainty using entropy matches with errors resulting from an
+            optimization with Mitsuba.</p>
+          <img src="static/images/uncertainty.png" alt="Uncertainty." />
+          <p>
+            On the right, we show the average estimation error followed by our entropy estimation. We observe that low
+            entropy is indicative of lower error, suggesting that it captures the sufficiency of information in the
+            input signal. On the dice example (top row), the `one'-face is lit less than other faces and we observe
+            highlights with lower intensity, leading to higher entropy. While we still recover the white albedo
+            correctly, the estimation of roughness and metallicity for the dot has a high error. Similarly, the inside
+            and lower parts of the doughnut are less observed and not lit by strong light sources. Again, entropy is
+            high in regions of high error (especially in metallicity). The triceratops collar is down-facing and not
+            well-lit and our entropy captures the lack of observation that leads to high error in the metallicity part.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End video carousel -->
+   </section>
 
   <!--BibTex citation -->
   <section class="section hero is-light" id="tldr">
