--- a/index.html
+++ b/index.html
@@ -187,28 +187,28 @@
           <div class="item item-object1">
             <div class="columns">
               <div class="column">
-                <h2 class="subtitle">Ours, 5.27<i>s</i></h2>
+                <h2 class="subtitle">Ours, <b>5.27</b>s</h2>
                 <video poster="" id="teapot_ours" autoplay muted loop width="100%">
                   <!-- Your video file here -->
                   <source src="static/video/gnome_scene003/video/sh/vid.mp4" type="video/mp4">
                 </video>
               </div>
               <div class="column">
-                <h2 class="subtitle">Ours + Mitsuba, 19.87<i>s</i></h2>
+                <h2 class="subtitle">Ours + Mitsuba, <b>19.87</b>s</h2>
                 <video poster="" id="teapot_oursplus" autoplay muted loop width="100%">
                   <!-- Your video file here -->
                   <source src="static/video/gnome_scene003/video/oursplusmitsuba/vid.mp4" type="video/mp4">
                 </video>
               </div>
               <div class="column">
-                <h2 class="subtitle">Mitsuba, 69.96<i>s</i></h2>
+                <h2 class="subtitle">Mitsuba, <b>69.96</b>s</h2>
                 <video poster="" id="teapot_mitsuba" autoplay muted loop width="100%">
                   <!-- Your video file here -->
                   <source src="static/video/gnome_scene003/video/mitsuba/vid.mp4" type="video/mp4">
                 </video>
               </div>
               <div class="column">
-                <h2 class="subtitle">NVDiffRec, 142.14<i>s</i></h2>
+                <h2 class="subtitle">NVDiffRec, <b>142.14</b>s</h2>
                 <video poster="" id="teapot_nv" autoplay muted loop width="100%">
                   <!-- Your video file here -->
                   <source src="static/video/gnome_scene003/video/nvdiffrec/vid.mp4" type="video/mp4">
@@ -219,28 +219,28 @@
           <div class="item item-object2">
             <div class="columns">
               <div class="column">
-                <h2 class="subtitle">Ours, 5.27<i>s</i></h2>
+                <h2 class="subtitle">Ours, <b>5.27</b>s</h2>
                 <video poster="" id="teapot_ours" autoplay muted loop width="100%">
                   <!-- Your video file here -->
                   <source src="static/video/cactus_scene005/video/sh/vid.mp4" type="video/mp4">
                 </video>
               </div>
               <div class="column">
-                <h2 class="subtitle">Ours + Mitsuba, 19.87<i>s</i></h2>
+                <h2 class="subtitle">Ours + Mitsuba, <b>19.87</b>s</h2>
                 <video poster="" id="teapot_oursplus" autoplay muted loop width="100%">
                   <!-- Your video file here -->
                   <source src="static/video/cactus_scene005/video/oursplusmitsuba/vid.mp4" type="video/mp4">
                 </video>
               </div>
               <div class="column">
-                <h2 class="subtitle">Mitsuba, 69.96<i>s</i></h2>
+                <h2 class="subtitle">Mitsuba, <b>69.96</b>s</h2>
                 <video poster="" id="teapot_mitsuba" autoplay muted loop width="100%">
                   <!-- Your video file here -->
                   <source src="static/video/cactus_scene005/video/mitsuba/vid.mp4" type="video/mp4">
                 </video>
               </div>
               <div class="column">
-                <h2 class="subtitle">NVDiffRec, 142.14<i>s</i></h2>
+                <h2 class="subtitle">NVDiffRec, <b>142.14</b>s</h2>
                 <video poster="" id="teapot_nv" autoplay muted loop width="100%">
                   <!-- Your video file here -->
                   <source src="static/video/cactus_scene005/video/nvdiffrec/vid.mp4" type="video/mp4">
@@ -251,28 +251,28 @@
           <div class="item item-object3">
             <div class="columns">
               <div class="column">
-                <h2 class="subtitle">Ours, 5.27<i>s</i></h2>
+                <h2 class="subtitle">Ours, <b>5.27</b>s</h2>
                 <video poster="" id="teapot_ours" autoplay muted loop width="100%">
                   <!-- Your video file here -->
                   <source src="static/video/teapot_scene001/video/sh/vid.mp4" type="video/mp4">
                 </video>
               </div>
               <div class="column">
-                <h2 class="subtitle">Ours + Mitsuba, 19.87<i>s</i></h2>
+                <h2 class="subtitle">Ours + Mitsuba, <b>19.87</b>s</h2>
                 <video poster="" id="teapot_oursplus" autoplay muted loop width="100%">
                   <!-- Your video file here -->
                   <source src="static/video/teapot_scene001/video/oursplusmitsuba/vid.mp4" type="video/mp4">
                 </video>
               </div>
               <div class="column">
-                <h2 class="subtitle">Mitsuba, 69.96<i>s</i></h2>
+                <h2 class="subtitle">Mitsuba, <b>69.96</b>s</h2>
                 <video poster="" id="teapot_mitsuba" autoplay muted loop width="100%">
                   <!-- Your video file here -->
                   <source src="static/video/teapot_scene001/video/mitsuba/vid.mp4" type="video/mp4">
                 </video>
               </div>
               <div class="column">
-                <h2 class="subtitle">NVDiffRec, 142.14<i>s</i></h2>
+                <h2 class="subtitle">NVDiffRec, <b>142.14</b>s</h2>
                 <video poster="" id="teapot_nv" autoplay muted loop width="100%">
                   <!-- Your video file here -->
                   <source src="static/video/teapot_scene001/video/nvdiffrec/vid.mp4" type="video/mp4">
