Refer to more results

--- a/index.html
+++ b/index.html
@@ -283,7 +283,8 @@
 
         </div>
         <p>We optimize a PBR texture (base color, metallicity, roughness) on multi-view captures from <a
-            href="https://stanfordorb.github.io" target="_blank">Stanford ORB</a> and relight the resulting object.</a>
+            href="https://stanfordorb.github.io" target="_blank">Stanford ORB</a> and relight the resulting object.
+            More results in the supplemental material and the paper.
         </p>
       </div>
     </div>
