--- a/index.html
+++ b/index.html
@@ -134,6 +134,11 @@
           Hanrahan (2001): we improve the model with <b>shadowing and masking</b> and propose a lightweight objective function
           for BRDF fitting using spherical harmonics power spectra (center). We then use this approximation to
           provide a measure of <b>uncertainty relying on statistical entropy</b>. We show that our material estimation is
+          We present fast and uncertainty-aware multi-view material acquisition for objects captured in uncontrolled setups.
+          We propose to build upon and extend the <b>signal processing framework for inverse rendering</b> by Ramamoorthi and
+          Hanrahan (2001): we improve the model with <b>shadowing and masking</b> and propose a lightweight objective function
+          for BRDF fitting using spherical harmonics power spectra (center). We then use this approximation to
+          provide a measure of <b>uncertainty relying on statistical entropy</b>. We show that our material estimation is
           significantly faster than previous work and achieves similar or better results.
         </h2>
       </div>
@@ -158,7 +163,7 @@
               observations contain enough information to reconstruct the appearance properties of the captured object.
             </p>
             <p>
-              We propose to consider the acquisition process from a signal-processing perspective.
+              We thus propose to consider the acquisition process from a signal-processing perspective.
               Given an object's geometry and a lighting environment, we estimate the properties of the materials on the
               object's surface in seconds.
               We do so by leveraging frequency domain analysis, considering the recovery of material properties as a
@@ -318,10 +323,10 @@
    </section>
 
   <!--BibTex citation -->
-  <section class="section hero is-light" id="tldr">
-    <div class="container is-max-desktop content">
+  <section class="section hero is-light" id="method">
+    <div class="container is-max-desktop content has-text-left">
       <h2 class="title is-3">Method overview</h2>
-      <p>Short explanation</p>
+      
     </div>
   </section>
   <!--End BibTex citation -->
@@ -357,6 +362,13 @@
     </div>
   </footer>
 
+  <script>
+    bulmaCarousel.attach('#results-carousel', {
+      autoplay: true,
+      autoplaySpeed: 6000,
+      loop: true
+    });
+  </script>
 </body>
 
 </html>
