--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
                   <a href="static/pdfs/supplementary_material.pdf" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
-                      <i class="fas fa-file-pdf"></i>
+                      <i class="fas fa-folder"></i>
                     </span>
-                    <span>Supplementary</span>
+                    <span>Supplementary (to be released, 257MB)</span>
                   </a>
                 </span>
 
