Teaser text update

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           Hanrahan (2001): we improve the model with <b>shadowing and masking</b> and propose a lightweight objective function
           for BRDF fitting using spherical harmonics power spectra (center). We then use this approximation to
           provide a measure of <b>uncertainty relying on statistical entropy</b>. We show that our material estimation is
-          significantly faster than previous work and achieves similar or better results.
+          significantly faster than previous work and achieves similar or better results (right).
         </h2>
       </div>
     </div>
