--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <pre><code>Coming soon/code></pre>
     </div>
   </section>
   <!--End BibTex citation -->
