--- a/index.html
+++ b/index.html
@@ -177,8 +177,9 @@
   <!-- End paper abstract -->
 
 
-  <!-- Video carousel -->
+  
    <section class="section">
+    <!-- Relighting -->
   <section class="hero is-small">
     <div class="hero-body">
       <div class="container is-max-desktop">
@@ -289,9 +290,9 @@
       </div>
     </div>
   </section>
-  <!-- End video carousel -->
+  <!-- End relighting -->
 
-  <!-- Video carousel -->
+  <!-- Uncertainty -->
   <section class="hero is-small">
     <div class="hero-body">
       <div class="container is-max-desktop">
@@ -316,17 +317,19 @@
       </div>
     </div>
   </section>
-  <!-- End video carousel -->
+  <!-- End uncertainty -->
    </section>
 
-  <!--BibTex citation -->
-  <section class="section hero is-light" id="method">
-    <div class="container is-max-desktop content has-text-left">
-      <h2 class="title is-3">Method overview</h2>
-      
+  <!--Method overview -->
+  <section class="section hero is-light is-small" id="method">
+    <div class="hero-body">
+      <div class="container is-max-desktop has-text-left">
+        <h2 class="title is-3">Method overview</h2>
+        
+      </div>
     </div>
   </section>
-  <!--End BibTex citation -->
+  <!--End method overview -->
 
   <!--BibTex citation -->
   <section class="section" id="BibTeX">
