Fix inline play

--- a/index.html
+++ b/index.html
@@ -189,28 +189,28 @@
             <div class="columns">
               <div class="column">
                 <h2 class="subtitle">Ours, <b>5.27</b>s</h2>
-                <video poster="" id="teapot_ours" autoplay muted playinline loop width="100%">
+                <video poster="" id="teapot_ours" autoplay muted playsinline loop width="100%">
                   <!-- Your video file here -->
                   <source src="static/video/gnome_scene003/video/sh/vid.mp4" type="video/mp4">
                 </video>
               </div>
               <div class="column">
                 <h2 class="subtitle">Ours + Mitsuba, <b>19.87</b>s</h2>
-                <video poster="" id="teapot_oursplus" autoplay muted playinline loop width="100%">
+                <video poster="" id="teapot_oursplus" autoplay muted playsinline loop width="100%">
                   <!-- Your video file here -->
                   <source src="static/video/gnome_scene003/video/oursplusmitsuba/vid.mp4" type="video/mp4">
                 </video>
               </div>
               <div class="column">
                 <h2 class="subtitle">Mitsuba, <b>69.96</b>s</h2>
-                <video poster="" id="teapot_mitsuba" autoplay muted playinline loop width="100%">
+                <video poster="" id="teapot_mitsuba" autoplay muted playsinline loop width="100%">
                   <!-- Your video file here -->
                   <source src="static/video/gnome_scene003/video/mitsuba/vid.mp4" type="video/mp4">
                 </video>
               </div>
               <div class="column">
                 <h2 class="subtitle">NVDiffRec, <b>142.14</b>s</h2>
-                <video poster="" id="teapot_nv" autoplay muted playinline loop width="100%">
+                <video poster="" id="teapot_nv" autoplay muted playsinline loop width="100%">
                   <!-- Your video file here -->
                   <source src="static/video/gnome_scene003/video/nvdiffrec/vid.mp4" type="video/mp4">
                 </video>
@@ -221,28 +221,28 @@
             <div class="columns">
               <div class="column">
                 <h2 class="subtitle">Ours, <b>5.27</b>s</h2>
-                <video poster="" id="teapot_ours" autoplay muted playinline loop width="100%">
+                <video poster="" id="teapot_ours" autoplay muted playsinline loop width="100%">
                   <!-- Your video file here -->
                   <source src="static/video/cactus_scene005/video/sh/vid.mp4" type="video/mp4">
                 </video>
               </div>
               <div class="column">
                 <h2 class="subtitle">Ours + Mitsuba, <b>19.87</b>s</h2>
-                <video poster="" id="teapot_oursplus" autoplay muted playinline loop width="100%">
+                <video poster="" id="teapot_oursplus" autoplay muted playsinline loop width="100%">
                   <!-- Your video file here -->
                   <source src="static/video/cactus_scene005/video/oursplusmitsuba/vid.mp4" type="video/mp4">
                 </video>
               </div>
               <div class="column">
                 <h2 class="subtitle">Mitsuba, <b>69.96</b>s</h2>
-                <video poster="" id="teapot_mitsuba" autoplay muted playinline loop width="100%">
+                <video poster="" id="teapot_mitsuba" autoplay muted playsinline loop width="100%">
                   <!-- Your video file here -->
                   <source src="static/video/cactus_scene005/video/mitsuba/vid.mp4" type="video/mp4">
                 </video>
               </div>
               <div class="column">
                 <h2 class="subtitle">NVDiffRec, <b>142.14</b>s</h2>
-                <video poster="" id="teapot_nv" autoplay muted playinline loop width="100%">
+                <video poster="" id="teapot_nv" autoplay muted playsinline loop width="100%">
                   <!-- Your video file here -->
                   <source src="static/video/cactus_scene005/video/nvdiffrec/vid.mp4" type="video/mp4">
                 </video>
@@ -253,28 +253,28 @@
             <div class="columns">
               <div class="column">
                 <h2 class="subtitle">Ours, <b>5.27</b>s</h2>
-                <video poster="" id="teapot_ours" autoplay mute playinline loop width="100%">
+                <video poster="" id="teapot_ours" autoplay mute playsinline loop width="100%">
                   <!-- Your video file here -->
                   <source src="static/video/teapot_scene001/video/sh/vid.mp4" type="video/mp4">
                 </video>
               </div>
               <div class="column">
                 <h2 class="subtitle">Ours + Mitsuba, <b>19.87</b>s</h2>
-                <video poster="" id="teapot_oursplus" autoplay muted playinline loop width="100%">
+                <video poster="" id="teapot_oursplus" autoplay muted playsinline loop width="100%">
                   <!-- Your video file here -->
                   <source src="static/video/teapot_scene001/video/oursplusmitsuba/vid.mp4" type="video/mp4">
                 </video>
               </div>
               <div class="column">
                 <h2 class="subtitle">Mitsuba, <b>69.96</b>s</h2>
-                <video poster="" id="teapot_mitsuba" autoplay muted playinline loop width="100%">
+                <video poster="" id="teapot_mitsuba" autoplay muted playsinline loop width="100%">
                   <!-- Your video file here -->
                   <source src="static/video/teapot_scene001/video/mitsuba/vid.mp4" type="video/mp4">
                 </video>
               </div>
               <div class="column">
                 <h2 class="subtitle">NVDiffRec, <b>142.14</b>s</h2>
-                <video poster="" id="teapot_nv" autoplay muted playinline loop width="100%">
+                <video poster="" id="teapot_nv" autoplay muted playsinline loop width="100%">
                   <!-- Your video file here -->
                   <source src="static/video/teapot_scene001/video/nvdiffrec/vid.mp4" type="video/mp4">
                 </video>
