--- a/index.html
+++ b/index.html
@@ -314,15 +314,6 @@
     <!-- End uncertainty -->
   </section>
 
-  <!--BibTex citation -->
-  <section class="section" id="BibTeX">
-    <div class="container is-max-desktop content">
-      <h2 class="title">BibTeX</h2>
-      <pre><code>Coming soon</code></pre>
-    </div>
-  </section>
-  <!--End BibTex citation -->
-
   <!--Problem statement -->
   <section class="section hero is-light is-small" id="method">
     <div class="hero-body">
@@ -331,8 +322,8 @@
           <div class="column is-four-fifths">
             <div class="content">
               <h2 class="title is-3">Problem statement</h2>
-              <p>We are often informed about the material of an object by the reflections off the object and how these
-                reflections change as we move. It is difficult to know what material we are dealing with if we miss
+              <p>The reflections we observe from an object inform us about the properties of its material.
+                Sometimes, it is difficult to know what material we are dealing with if we miss
                 certain reflections or if a part of the object is in the shade. This can happen, for example, on a
                 cloudy
                 day where a glossy surface looks similar to a matte surface under certain viewing angles.</p>
@@ -503,6 +494,16 @@
     </div>
   </section>
   <!--End contributions overview -->
+
+
+  <!--BibTex citation -->
+  <section class="section hero is-small is-light" id="BibTeX">
+    <div class="container is-max-desktop content">
+      <h2 class="title">BibTeX</h2>
+      <pre><code>Coming soon</code></pre>
+    </div>
+  </section>
+  <!--End BibTex citation -->
 
   <footer class="footer">
     <div class="container">
