--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 
 
   <!--BibTex citation -->
-  <section class="section hero is-small is-light" id="BibTeX">
+  <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>Coming soon</code></pre>
