Learn more block

--- a/index.html
+++ b/index.html
@@ -445,8 +445,8 @@
                 <p>Our third contribution is to develop an extremely light-weight approximation of the convolution model
                   that operates completely in the power spectrum of the spherical harmonics. This allows us to explore
                   hundreds of BRDF parameter combinations in a couple of milliseconds.</p>
-                  <img src="static/images/power_spectrum.png"
-                    alt="An image showing three plots, representing power spectra. The first plot is the power spectrum of the incoming light, the second plot of the BRDF and the third of the outgoing light. On the second plot, the graph shows alternative plots for different parameter combinations." />
+                <img src="static/images/power_spectrum.png"
+                  alt="An image showing three plots, representing power spectra. The first plot is the power spectrum of the incoming light, the second plot of the BRDF and the third of the outgoing light. On the second plot, the graph shows alternative plots for different parameter combinations." />
               </div>
               <div class="content">
                 <h3 class="title is-4">Uncertainty as Entropy</h3>
@@ -494,6 +494,66 @@
     </div>
   </section>
   <!--End contributions overview -->
+
+  <!--Find out more -->
+  <section class="section hero is-light is-small" id="method">
+    <div class="hero-body">
+      <div class="container is-max-desktop has-text-left">
+        <div class="columns is-centered has-text-left">
+          <div class="column is-four-fifths">
+            <div class="content">
+              <h2 class="title is-3">Learn more</h2>
+              <div class="publication-links">
+                <!-- Arxiv PDF link -->
+                <span class="link-block">
+                  <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                    </span>
+                    <span>Paper</span>
+                  </a>
+                </span>
+
+                <!-- Supplementary PDF link -->
+                <span class="link-block">
+                  <a href="static/pdfs/supplementary_material.pdf" target="_blank"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fas fa-folder"></i>
+                    </span>
+                    <span>Supplementary (to be released, 257MB)</span>
+                  </a>
+                </span>
+
+                <!-- Github link -->
+                <span class="link-block">
+                  <a href="#" target="_blank" class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="fab fa-github"></i>
+                    </span>
+                    <span>Code (to be released)</span>
+                  </a>
+                </span>
+
+                <!-- ArXiv abstract Link -->
+                <span class="link-block">
+                  <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="ai ai-arxiv"></i>
+                    </span>
+                    <span>arXiv</span>
+                  </a>
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--End find out more -->
 
 
   <!--BibTex citation -->
