--- a/index.html
+++ b/index.html
@@ -426,6 +426,8 @@
                 </div>
               </div>
 
+              <hr/><br/>
+
               <div class="columns">
                 <div class="column is-8">
                   <div class="content">
@@ -440,6 +442,9 @@
                     alt="An image that represents shadowing and masking." />
                 </div>
               </div>
+
+              <hr/><br/>
+
               <div class="content">
                 <h3 class="title is-4">Power Spectrum Approximation</h3>
                 <p>Our third contribution is to develop an extremely light-weight approximation of the convolution model
@@ -448,6 +453,9 @@
                 <img src="static/images/power_spectrum.png"
                   alt="An image showing three plots, representing power spectra. The first plot is the power spectrum of the incoming light, the second plot of the BRDF and the third of the outgoing light. On the second plot, the graph shows alternative plots for different parameter combinations." />
               </div>
+
+              <hr/><br/>
+
               <div class="content">
                 <h3 class="title is-4">Uncertainty as Entropy</h3>
                 <p>Our final contribution is to use statistical entropy on the likelihood of BRDF parameters to
@@ -502,7 +510,7 @@
         <div class="columns is-centered has-text-left">
           <div class="column is-four-fifths">
             <div class="content">
-              <h2 class="title is-3">Learn more</h2>
+              <h2 class="title is-3">Find out more</h2>
               <div class="publication-links">
                 <!-- Arxiv PDF link -->
                 <span class="link-block">
