--- a/index.html
+++ b/index.html
@@ -180,6 +180,64 @@
   </section>
   <!-- End paper abstract -->
 
+
+  <!--Problem statement -->
+  <section class="section hero is-small" id="method">
+    <div class="hero-body">
+      <div class="container is-max-desktop has-text-left">
+        <div class="columns is-centered has-text-left">
+          <div class="column is-four-fifths">
+            <div class="content">
+              <h2 class="title is-3">Problem statement</h2>
+              <p>The reflections we observe from an object inform us about the properties of its material.
+                Sometimes, it is difficult to know what material we are dealing with if we miss
+                certain reflections or if a part of the object is in the shade. This can happen, for example, on a
+                cloudy
+                day where a glossy surface looks similar to a matte surface under certain viewing angles.</p>
+              <p>Which plane is glossy and which is matte? On the left, it's difficult to find out because of the
+                lighting. On the right, it's immediately clear.</p>
+            </div>
+          </div>
+        </div>
+        <img src="static/images/problem_statement.png"
+          alt="Two images that show the same matte and glossy surface in two lighting setups. The first image is rendered with a cloudy environment and the surfaces look similar. The second image is rendered with a sunny environment and the surfaces look very different." />
+      </div>
+    </div>
+  </section>
+  <!--End problem statement -->
+
+  <!--Method overview -->
+  <section class="section hero is-light is-small" id="method">
+    <div class="hero-body">
+      <div class="container is-max-desktop has-text-left">
+        <div class="columns is-centered has-text-left">
+          <div class="column is-four-fifths">
+            <div class="content">
+              <h2 class="title is-3">Overview</h2>
+              <p>The question whether we have the right lighting- and viewing conditions can be posed as a question of
+                uncertainty. In this paper, we aim to quantify this uncertainty. Our work differs from recent
+                contributions on
+                uncertainty in inverse rendering by approaching the reflection equation from the signal processing
+                framework
+                on inverse rendering (Ramamoorthi and Hanrahan, 2001). Along the way, we find that an improved version
+                of
+                this
+                framework
+              <ul>
+                <li> can <b>match state-of-the-art results in a fraction of the time</b> on the task of material
+                  inversion,</li>
+                <li> while <b>providing a practical way to measure uncertainty</b>.</li>
+              </ul>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
+  <!--End method overview -->
+
   <!-- Results -->
   <section class="section">
     <!-- Relighting -->
@@ -314,63 +372,6 @@
     <!-- End uncertainty -->
   </section>
 
-  <!--Problem statement -->
-  <section class="section hero is-light is-small" id="method">
-    <div class="hero-body">
-      <div class="container is-max-desktop has-text-left">
-        <div class="columns is-centered has-text-left">
-          <div class="column is-four-fifths">
-            <div class="content">
-              <h2 class="title is-3">Problem statement</h2>
-              <p>The reflections we observe from an object inform us about the properties of its material.
-                Sometimes, it is difficult to know what material we are dealing with if we miss
-                certain reflections or if a part of the object is in the shade. This can happen, for example, on a
-                cloudy
-                day where a glossy surface looks similar to a matte surface under certain viewing angles.</p>
-              <p>Which plane is glossy and which is matte? On the left, it's difficult to find out because of the
-                lighting. On the right, it's immediately clear.</p>
-            </div>
-          </div>
-        </div>
-        <img src="static/images/problem_statement.png"
-          alt="Two images that show the same matte and glossy surface in two lighting setups. The first image is rendered with a cloudy environment and the surfaces look similar. The second image is rendered with a sunny environment and the surfaces look very different." />
-      </div>
-    </div>
-  </section>
-  <!--End problem statement -->
-
-  <!--Method overview -->
-  <section class="section hero is-small" id="method">
-    <div class="hero-body">
-      <div class="container is-max-desktop has-text-left">
-        <div class="columns is-centered has-text-left">
-          <div class="column is-four-fifths">
-            <div class="content">
-              <h2 class="title is-3">Method overview</h2>
-              <p>The question whether we have the right lighting- and viewing conditions can be posed as a question of
-                uncertainty. In this paper, we aim to quantify this uncertainty. Our work differs from recent
-                contributions on
-                uncertainty in inverse rendering by approaching the reflection equation from the signal processing
-                framework
-                on inverse rendering (Ramamoorthi and Hanrahan, 2001). Along the way, we find that an improved version
-                of
-                this
-                framework
-              <ul>
-                <li> can <b>match state-of-the-art results in a fraction of the time</b> on the task of material
-                  inversion,</li>
-                <li> while <b>providing a practical way to measure uncertainty</b>.</li>
-              </ul>
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    </div>
-  </section>
-  <!--End method overview -->
-
   <!--Signal processing recap -->
   <section class="section hero is-light is-small" id="method">
     <div class="hero-body">
@@ -378,6 +379,7 @@
         <div class="columns is-centered has-text-left">
           <div class="column is-four-fifths">
             <div class="content">
+              <h2 class="title is-3">Method</h2>
               <div class="columns">
                 <div class="column is-8">
                   <div class="content">
