--- a/index.html
+++ b/index.html
@@ -224,8 +224,7 @@
                 this
                 framework
               <ul>
-                <li> can <b>match state-of-the-art results in a fraction of the time</b> on the task of material
-                  inversion,</li>
+                <li> can <b>match state-of-the-art results in a fraction of the time</b> on the task of BRDF recovery,</li>
                 <li> while <b>providing a practical way to measure uncertainty</b>.</li>
               </ul>
               </p>
@@ -433,9 +432,9 @@
               <div class="columns">
                 <div class="column is-8">
                   <div class="content">
-                    <h3 class="title is-4">BRDF Recover with Shadowing and Masking</h3>
+                    <h3 class="title is-4">BRDF Recovery with Shadowing and Masking</h3>
                     <p>Our second contribution is to use these coefficients in a BRDF optimization pipeline to estimate
-                      parameters for an analytic microfacet BRDF. We improve the accuracy of the convolution model by
+                      parameters for an analytic microfacet BRDF (Disney principled BRDF). We improve the accuracy of the convolution model by
                       incorporating shadowing and masking.</p>
                   </div>
                 </div>
