--- a/index.html
+++ b/index.html
@@ -224,7 +224,8 @@
                 this
                 framework
               <ul>
-                <li> can <b>match state-of-the-art results in a fraction of the time</b> on the task of BRDF recovery,</li>
+                <li> can <b>match state-of-the-art results in a fraction of the time</b> on the task of BRDF recovery,
+                </li>
                 <li> while <b>providing a practical way to measure uncertainty</b>.</li>
               </ul>
               </p>
@@ -385,7 +386,8 @@
                     <h3 class="title is-4">Reflection as Convolution</h3>
                     <p>The signal processing framework for inverse rendering (Ramamoorthi and Hanrahan, 2001) shows that
                       the reflection equation can be
-                      approximated as a rotational convolution of the BRDF kernel with the incoming light over the incoming-
+                      approximated as a rotational convolution of the BRDF kernel with the incoming light over the
+                      incoming-
                       and outgoing light directions at a point on the surface. This perspective allows us to study
                       inverse
                       rendering in the <i>frequency domain</i>, here the spherical harmonics domain.</p>
@@ -417,8 +419,7 @@
                     <h3 class="title is-4">Robust Spherical Harmonics Transform</h3>
                     <p>Our first contribution is a method to estimate the spherical harmonics coefficients for the
                       incoming- and outgoing radiance field, for sparse and irregularly distributed viewing positions.
-                      We
-                      achieve this by a least-squares fit with a weighted L2 regularization.</p>
+                      We achieve this by a least-squares fit with a weighted L2 regularization.</p>
                   </div>
                 </div>
                 <div class="column is-4">
@@ -427,15 +428,15 @@
                 </div>
               </div>
 
-              <hr/><br/>
+              <hr /><br />
 
               <div class="columns">
                 <div class="column is-8">
                   <div class="content">
                     <h3 class="title is-4">BRDF Recovery with Shadowing and Masking</h3>
                     <p>Our second contribution is to use these coefficients in a BRDF optimization pipeline to estimate
-                      parameters for an analytic microfacet BRDF (Disney principled BRDF). We improve the accuracy of the convolution model by
-                      incorporating shadowing and masking.</p>
+                      parameters for an analytic microfacet BRDF (Disney principled BRDF). We improve the accuracy of
+                      the convolution model by incorporating shadowing and masking.</p>
                   </div>
                 </div>
                 <div class="column is-4">
@@ -444,18 +445,19 @@
                 </div>
               </div>
 
-              <hr/><br/>
+              <hr /><br />
 
               <div class="content">
                 <h3 class="title is-4">Power Spectrum Approximation</h3>
                 <p>Our third contribution is to develop an extremely light-weight approximation of the convolution model
                   that operates completely in the power spectrum of the spherical harmonics. This allows us to explore
-                  hundreds of BRDF parameter combinations in a couple of milliseconds. Moreover, the power spectrum is invariant to rotations of local coordinate frame (here, rotated normals).</p>
+                  hundreds of BRDF parameter combinations in a couple of milliseconds. Moreover, the power spectrum is
+                  invariant to rotations of local coordinate frame (here, rotated normals).</p>
                 <img src="static/images/power_spectrum.png"
                   alt="An image showing three plots, representing power spectra. The first plot is the power spectrum of the incoming light, the second plot of the BRDF and the third of the outgoing light. On the second plot, the graph shows alternative plots for different parameter combinations." />
               </div>
 
-              <hr/><br/>
+              <hr /><br />
 
               <div class="content">
                 <h3 class="title is-4">Uncertainty as Entropy</h3>
