--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
                 <!-- Supplementary PDF link -->
                 <span class="link-block">
-                  <a href="static/pdfs/supplementary_material.pdf" target="_blank"
+                  <a href="https://www.dropbox.com/scl/fi/od8vqfd5ydwzrdzzphr4k/suppmat.zip?rlkey=2tupkjyqjkotk5aqr9htoglqg&st=oc7myki5&dl=0" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-folder"></i>
