--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <span class="icon">
                       <i class="fas fa-folder"></i>
                     </span>
-                    <span>Supplementary (to be released, 257MB)</span>
+                    <span>Supplementary (257MB)</span>
                   </a>
                 </span>
 
