--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   <a href="/suppmat" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
-                      <i class="fas fa-folder"></i>
+                      <i class="fas fa-plus"></i>
                     </span>
                     <span>Supplementary</span>
                   </a>
